--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "https://Sunilwants.github.io/My_Portfolio",
-  "name": "My_Portfolio",
+  "homepage": "https://Sunilwants.github.io/Portfolio",
+  "name": "Portfolio",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
